--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "JS API for Kickass torrent",
   "main": "lib/kat.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel ./src -d ./lib",
-    "lint": "eslint ./src"
+    "test": "nyc  mocha --timeout 100000 --require babel-core/register",
+    "build": "npm run lint && babel ./src -d ./lib",
+    "lint": "eslint ./src",
+    "prepublishOnly": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -15,6 +16,7 @@
   "keywords": [
     "KickAssTorrent",
     "API",
+    "kat-api",
     "KickAssTorrent",
     "Kickass Torrent API",
     "javascript"
@@ -30,12 +32,20 @@
     "babel-preset-env": "^1.7.0",
     "eslint": "^5.12.0",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0"
+    "eslint-plugin-import": "^2.14.0",
+    "mocha": "^5.2.0",
+    "nyc": "^13.1.0"
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
     "query-string": "^6.2.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.2"
+  },
+  "nyc" : {
+    "reporter": [
+      "lcov",
+      "text"
+    ]
   }
 }
